# mcp-proxy

./: .pre-commit-config.yaml  README.md  llms.txt  pyproject.toml
.github/workflows/: auto-merge.yaml  ci.yaml  codeql.yaml  release-notes.yaml
docs/: ARCHITECTURE.md
src/mcp_proxy/: __main__.py  access_log.py  admin_api.py  circuit_breaker.py  config_loader.py  dashboard.py  hot_reload.py  mcp_server.py  metrics.py  proxy_server.py  rate_limiter.py  reconnect_manager.py  rest_adapter.py  retry.py  server_registry.py  tracing.py
tests/: test_access_log.py  test_api_key_auth.py  test_audit_log.py  test_circuit_breaker.py  test_config_loader.py  test_dashboard.py  test_dynamic_registration.py  test_hot_reload.py  test_mcp_server.py  test_metrics.py  test_multi_api_key.py  test_proxy_server.py  test_rate_limiter.py  test_rbac_tools.py  test_rest_adapter.py  test_retry.py  test_roots_forwarding.py  test_tracing.py
