[project]
name = "mcp-proxy-plus"
description = "Enhanced MCP proxy with health endpoint, graceful failure handling, env var expansion, API key auth, and rmcp 0.17 compatibility. Fork of sparfenyuk/mcp-proxy."
authors = [
    { name = "Claudio Ferreira Filho", email = "filhocf@gmail.com" },
    { name = "Sergey Parfenyuk", email = "sergey.parfenyuk@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
version = "0.10.1"
requires-python = ">=3.10"
dependencies = ["httpx-auth>=0.22.0", "mcp>=1.17.0", "uvicorn>=0.34.0"]

[project.optional-dependencies]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/filhocf/mcp-proxy"
Source = "https://github.com/filhocf/mcp-proxy"
Documentation = "https://github.com/filhocf/mcp-proxy"
Changelog = "https://github.com/filhocf/mcp-proxy/releases"
Upstream = "https://github.com/sparfenyuk/mcp-proxy"

[project.scripts]
mcp-proxy = "mcp_proxy.__main__:main"
mcp-proxy-plus = "mcp_proxy.__main__:main"
mcp-reverse-proxy = "mcp_proxy.__main__:client"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.25.0",
    "coverage>=7.6.0",
    "mypy>=1.0.0",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
skip_covered = true
show_missing = true
precision = 2
exclude_lines = [
    'pragma: no cover',
    'raise NotImplementedError',
    'if TYPE_CHECKING:',
    'if typing.TYPE_CHECKING:',
    '@overload',
    '@typing.overload',
    '\(Protocol\):$',
    'typing.assert_never',
    '$\s*assert_never\(',
    'if __name__ == .__main__.:',
]

[tool.mypy]
allow_redefinition = false
disallow_untyped_defs = true
follow_imports = "normal"
follow_untyped_imports = true
no_implicit_optional = true
show_error_code_links = true
show_error_codes = true
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "EM101",  # Exception must not use a string literal, assign to variable first
    "TRY003", # Avoid specifying long messages outside the exception class
    "ERA001", # Found commented-out code
    "FBT001", # Boolean-typed positional argument (upstream pattern)
    "C901",   # Function too complex (intentional in proxy/server orchestration)
    "PLR0915", # Too many statements (intentional in proxy/server orchestration)
    "PERF203", # try-except in loop (intentional for graceful failure)
    "RUF059", # Unused unpacked variable (test fixtures)
    "PTH111", # os.path.expanduser (upstream pattern)
    "RUF100", # Unused noqa directives (upstream has some, harmless)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "INP001", "ARG001", "SIM117", "ASYNC110", "PLC0415", "E501", "ANN401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = "src"
addopts = ["--import-mode=importlib"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
